adding martin stoof

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,1 +1,31 @@
-This is the p martin conway website.
+<div class="page_container">
+  <div class="header_container clearfix">
+      <div class="picture_wrapper">
+          <img src="img/marty.jpg">
+      </div>
+      <div class="bio_wrapper">
+          <h1>P. MARTIN CONWAY</h1>
+          <h2>Freelance Researcher</h2>
+          <h3>Former mathematics professor at Mount Holyoke College</h3>
+          <a href="#" class="edit_links">edit bio section</a>
+      </div>
+  </div>
+  <div class="body_container clearfix">
+      <div class="publication_section_wrapper clearfix">
+          <h2 class="publications">Publications</h2>
+          <a href="#" class="edit_links">edit publications section</a>
+          <ul class="publications_wrapper">
+              <li>Publications will be added here</li>
+              <button class="btn upload_button">upload new publication</button>
+          </ul>
+      </div>
+      <div class="about_section_wrapper clearfix">
+          <h2>About Martin</h2>
+          <a href="#" class="edit_links">edit about section</a>
+          <p>40 years of teaching math and physics! I finally retired in 2011, leaving the ivied brick buildings of Mount Holyoke College, somewhat reluctantly, behind. I was not able to leave academics however. I actually took a course in the history and development of the earth's climate in 2011 and was inspired to start a program of paper writing. I began with issues surrounding climate change but gradually broadened to other technical issues.</p>
+          <p>I credit my sources generally near the beginning but I do not adhere to the more rigid citation requirements found in term papers. It is my intent, in all these papers, to present material which may be too technical, too lengthy, and too remote for accessibility by the average educated reader and to do so in a condensed and understandable form.</p>
+          <p>I hope that you enjoy reading them as much as I have enjoyed writing them. I welcome any comments you may have.</p>
+          <p><a href="mailto:mconway@gogtt.net">Contact Martin</a></p>
+      </div>
+  </div>
+</div>
