--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,11 +1,12 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Pmartinconway</title>
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-  <%= csrf_meta_tags %>
-</head>
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+	<head>
+  	<title>Martin Conway</title>
+  	<link type="text/css" rel="stylesheet" href="css/bootstrap-responsive.min.css" />
+    <link type="text/css" rel="stylesheet" href="css/bootstrap.min.css" />
+  	<link type="text/css" rel="stylesheet" href="css/style.css" />
+	</head>
 <body>
 
 <%= yield %>
