change in wording to about section

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -22,8 +22,8 @@
       <div class="about_section_wrapper clearfix">
           <h2>About Me</h2>
           <a href="#" class="edit_links">edit about section</a>
-          <p>40 years of teaching math and physics! I finally retired in 2011, leaving the ivied brick buildings of Mount Holyoke College, somewhat reluctantly, behind. I was not able to leave academics however. I actually took a course in the history and development of the earth's climate in 2011 and was inspired to start a program of paper writing. I began with issues surrounding climate change but gradually broadened to other technical issues.</p>
-          <p>I credit my sources generally near the beginning but I do not adhere to the more rigid citation requirements found in term papers. It is my intent, in all these papers, to present material which may be too technical, too lengthy, and too remote for accessibility by the average educated reader and to do so in a condensed and understandable form.</p>
+          <p>40 years of teaching math and physics! I finally retired in 2011, leaving the dusty halls of Longmeadow High School and the ivied brick buildings of Mount Holyoke College, somewhat reluctantly, behind. I was not able to leave academics completely however. I actually took a course in the history and development of the earth's climate in 2011 and was inspired to start a program of paper writing.</p>
+          <p>II began with issues surrounding climate change but gradually broadened to other technical issues. I credit my sources generally near the beginning of the papers but I do not adhere to the more rigid citation requirements found in academic term papers. It is my intent, in all this work, to present material which may be too technical, too lengthy, and too remote for accessibility by the average educated reader and to do so in a condensed and understandable form.</p>
           <p>I hope that you enjoy reading them as much as I have enjoyed writing them. I welcome any comments you may have.</p>
           <p><a href="mailto:mconway@gogtt.net">Contact Martin</a></p>
       </div>
