--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -15,7 +15,9 @@
           <h2 class="publications">Publications</h2>
           <a href="#" class="edit_links">edit publications section</a>
           <ul class="publications_wrapper">
-              <li>Publications will be added here</li>
+              <li><a href="knowledge_about_climate_change.pdf" target="_blank">Knowledge about Climate Change</a></li>
+              <li><a href="conspiracy_theory_beliefs.pdf" target="_blank">Conspiracy Theory Beliefs</a></li>
+              <li><a href="denial_of_climate_change.pdf" target="_blank">Denial of Climate Change</a></li>
               <button class="btn upload_button">upload new publication</button>
           </ul>
       </div>
