adding new publications

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -18,6 +18,12 @@
               <li><a href="docs/knowledge_about_climate_change.pdf" target="_blank">Knowledge about Climate Change</a></li>
               <li><a href="docs/conspiracy_theory_beliefs.pdf" target="_blank">Conspiracy Theory Beliefs</a></li>
               <li><a href="docs/denial_of_climate_change.pdf" target="_blank">Denial of Climate Change</a></li>
+              <li><a href="docs/all_scientists_are_skeptics.pdf" target="_blank">All Scientists are Skeptics</a></li>
+              <li><a href="docs/mckibben_3_Numbers.pdf" target="_blank">Global Warming's Terrifying New Math</a></li>
+              <li><a href="docs/politics_and_american_exceptionalism.pdf" target="_blank">Politics and American Exceptionalism</a></li>
+              <li><a href="docs/scott_brown’s_important_votes.pdf" target="_blank">Scott Brown’s Important Votes</a></li>
+              <li><a href="docs/some_perspective_on_genetically_modified_foods.pdf" target="_blank">Some Perspective on Genetically Modified Foods</a></li>
+              <li><a href="docs/the_dark_side.pdf" target="_blank">The Dark Side: What if Climate Pessimists are Right?</a></li>
               <button class="btn upload_button">upload new publication</button>
           </ul>
       </div>
