--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -24,6 +24,7 @@
               <li><a href="docs/scott_brown’s_important_votes.pdf" target="_blank">Scott Brown’s Important Votes</a></li>
               <li><a href="docs/some_perspective_on_genetically_modified_foods.pdf" target="_blank">Some Perspective on Genetically Modified Foods</a></li>
               <li><a href="docs/the_dark_side.pdf" target="_blank">The Dark Side: What if Climate Pessimists are Right?</a></li>
+              <li><a href="docs/liberal_media.pdf" target="_blank">What if We Had a Liberal Media?</a></li>
               <button class="btn upload_button">upload new publication</button>
           </ul>
       </div>
